UI refinements based on feedback - "Sort the egg into the correct basket!" => "Click the correct basket for the egg." - "Try again" --> "Try another egg!" - change basket selection image [#132340593] - improve layout of eggs with odd numbers of eggs - adjust overall layout to fit better on smaller (e.g. 1024) displays

--- a/src/stylus/challenges.styl
+++ b/src/stylus/challenges.styl
@@ -325,8 +325,7 @@
   #baskets
     position: absolute
     top: 35px
-    left: 30px
-    width: 700px
+    width: 660px
     height: 300px
   
   .geniblocks.basket-set
@@ -358,8 +357,7 @@
   #eggs
     position: absolute
     top: 335px
-    left: 30px
-    width: 700px
+    width: 660px
   
   .geniblocks.egg-clutch
     display: flex
@@ -375,8 +373,6 @@
       opacity: 0.4
       width: 75px
       height: 109px
-      margin-left: 35px
-      margin-right: 35px
 
     .clutch-egg.selected
       cursor: default
@@ -388,7 +384,7 @@
   #right-section
     position: absolute
     top: 80px
-    left: 715px
+    left: 680px
     width: 320px
     height: 440px
 
